# laggy-multiplayer-peer-staging

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  SConstruct  methods.py
.github/workflows/: build-fast.yml  build-main.yml
demo/: check_extension.gd  check_extension.gd.uid  icon.svg.import  project.godot
demo/scenes/: main.gd  main.gd.uid  main.tscn  ping.gd  ping.gd.uid  ping.tscn  player.gd  player.gd.uid  player.tscn
doc_classes/: LaggyMultiplayerPeer.xml
src/: callable_utils.cpp  callable_utils.h  laggy_multiplayer_peer.cpp  laggy_multiplayer_peer.h  laggy_packet.cpp  laggy_packet.h  register_types.cpp
